# lawyer_website

./: .gitignore  Dockerfile  Dockerfile-prod  alembic.ini  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
src/: celery_app.py  main.py
src/api/: contact_routers.py  court_form_routers.py  order_routers.py  pages_routers.py  payments_routers.py
src/core/: config.py
src/db/: database.py
src/db/models/: order.py
src/migrations/: env.py
src/migrations/versions/: 0b12224d2df3_initial_migration.py
src/schemas/: order_schema.py
src/services/: doc_generator.py  liqpay.py  telegram.py
src/static/css/: styles.css
src/templates/: contact.html  court_form.html  dogovor.html  index.html  payment_success.html
