[tool.poetry]
name = "lawyer-website"
version = "0.1.0"
description = "FastAPI проект для адвокатского сайта"
authors = ["Mykola Chayun <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.128.0"
python-multipart = "^0.0.21"
uvicorn = "0.40.0"
python-telegram-bot = "22.5"
httpx = "0.28.1"
jinja2 = "3.1.6"
black = "^25.12.0"
isort = "^7.0.0"
dotenv = "^0.9.9"
celery = "^5.6.2"
redis = "^7.1.0"
python-docx = "1.2.0"
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
alembic = "^1.17.2"
greenlet = "^3.3.0"
psycopg = "^3.3.2"


[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
